# rims-code.github.io

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: generate_website_pr.yaml  website_deploy.yaml
db/: README.md  ba-001.json
docs/: contribute.md  crystal-calculator.md  index.md  schemes.md
docs/ba/: ba-1.md  ba-2.md  index.md
docs/fe/: fe-1.md  index.md
docs/zr/: index.md  zr-1.md
src/rimscode_website/: __init__.py  create_website.py  elements_md.py  mkdocs_handler.py  schemes_md.py  utils.py
tests/: test_elements_md.py  test_mkdocs_handler.py  test_schemes_md.py
